--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.logo img {
+  width:200px;
+}
+
 /*--------------------------- Color variations ----------------------*/
 /* Medium Layout: 1280px */
 /* Tablet Layout: 768px */
@@ -2135,9 +2139,9 @@ nav a:hover {
 
 .banner-area .overlay-bg {
   opacity: .8;
-  background-image: -webkit-linear-gradient(bottom, #f62e71 0%, #f9ab72 100%);
-  background-image: -o-linear-gradient(bottom, #f62e71 0%, #f9ab72 100%);
-  background-image: linear-gradient(to top, #f62e71 0%, #f9ab72 100%);
+  background-image: -webkit-linear-gradient(bottom, #2f1919 0%, #ffdeae 100%);
+  background-image: -o-linear-gradient(bottom, #2f1919 0%, #ffdeae 100%);
+  background-image: linear-gradient(to top, #2f1919 0%, #ffdeae 100%);
 }
 
 .banner-content {
